# cuda-learning

./: .clang-format  CMakeLists.txt  README.md
cmake/: cuda.cmake
common/: cmdline.h  cuda_utils.cuh  data_utils.h
elementwise/: CMakeLists.txt  elementwise.h  elementwise_add.cu  main.cpp
transpose/: CMakeLists.txt  transpose.cu  transpose.h
